--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Lingua::Ispell.
 
+0.06  Fri Apr 14 16:51:44 EDT 2000
+	- misses/guesses now returned as arrays rather than space-separated strings.
+
 0.05  Fri Oct 22 10:53:38 EDT 1999
 	- renamed from Text::Ispell
 
