--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Perl extension Lingua::Ispell.
 
+0.07  Tue Apr 18 11:09:59 EDT 2000
+	- removed support for non-terse mode; this saves me from having to try to
+	  parse the input line the same as ispell does.  The downside is that user
+	  programs don't get reports on correctly spelled words.  Hopefully this
+	  fixes a lot of bugs.
+	- "*_dictionaries" subs renamed as "*_dictionary"
+
 0.06  Fri Apr 14 16:51:44 EDT 2000
 	- misses/guesses now returned as arrays rather than space-separated strings.
 
